--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,8 +4,9 @@
     <string name="app_name">GeoQuiz</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="question_text">What\'s the capital of Turkey?</string>
+    <string name="question_text">Istanbul is the largest city in Turkey.</string>
     <string name="true_button">True</string>
     <string name="false_button">False</string>
-
+	<string name="correct_toast_string">Correct!</string>
+	<string name="wrong_toast_string">Wrong!</string>
 </resources>
