--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,8 +5,14 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="question_text">Istanbul is the largest city in Turkey.</string>
-    <string name="true_button">True</string>
-    <string name="false_button">False</string>
-	<string name="correct_toast_string">Correct!</string>
-	<string name="wrong_toast_string">Wrong!</string>
+	<string name="button0">0</string>
+	<string name="button1">1</string>
+	<string name="button2">2</string>
+	<string name="button3">3</string>
+	<string name="button4">4</string>
+	<string name="button5">5</string>
+	<string name="button6">6</string>
+	<string name="button7">7</string>
+	<string name="button8">8</string>
+	<string name="button9">9</string>	
 </resources>
