Snapshot... Too lazy for granular commits...

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,4 +15,7 @@
 	<string name="button7">7</string>
 	<string name="button8">8</string>
 	<string name="button9">9</string>	
+	
+	<string name="backspace">&lt;</string>	
+	<string name="reveal_number">"?"</string>	
 </resources>
