--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">AndroidKravi</string>
-    <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="question_text">Istanbul is the largest city in Turkey.</string>
+	<string name="app_name">Крави и Бикове</string>
+	<string name="action_settings">Settings</string>
 	<string name="button0">0</string>
 	<string name="button1">1</string>
 	<string name="button2">2</string>
