--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
 	<string name="app_name">Крави и Бикове</string>
 	<string name="action_settings">Settings</string>
 	<string name="button0">0</string>
@@ -12,8 +11,9 @@
 	<string name="button6">6</string>
 	<string name="button7">7</string>
 	<string name="button8">8</string>
-	<string name="button9">9</string>	
-	
-	<string name="backspace">&lt;</string>	
-	<string name="reveal_number">"?"</string>	
+	<string name="button9">9</string>
+	<string name="backspace">&lt;</string>
+	<string name="reveal_number">"?"</string>
+	<string name="number_here">number here</string>
+	<string name="icon_here">bull or cow icon here</string>
 </resources>
