Properly functioning/scrollable ListView

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,7 +12,7 @@
 	<string name="button7">7</string>
 	<string name="button8">8</string>
 	<string name="button9">9</string>
-	<string name="backspace">&lt;</string>
+	<string name="backspace">x</string>
 	<string name="reveal_number">"?"</string>
 	<string name="number_here">number here</string>
 	<string name="icon_here">bull or cow icon here</string>
