--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="app_name">Крави и Бикове</string>
+	<string name="app_help_name">Как се играе играта</string>
 	<string name="action_settings">Settings</string>
 	<string name="button0">0</string>
 	<string name="button1">1</string>
@@ -12,8 +13,9 @@
 	<string name="button7">7</string>
 	<string name="button8">8</string>
 	<string name="button9">9</string>
-	<string name="backspace">x</string>
-	<string name="reveal_number">"?"</string>
+	<string name="backspace">"изтрии"</string>
+	<string name="reveal_number">"правила"</string>
 	<string name="number_here">number here</string>
 	<string name="icon_here">bull or cow icon here</string>
+	<string name="help_text"></string>
 </resources>
